[YNM web] The web application now can handle camera register and searching the report

--- a/ynm/static/ynm/index.html
+++ b/ynm/static/ynm/index.html
@@ -14,12 +14,13 @@
 	</div>
 	<div id="outer">
 	<div id="sidebar">
-		<!--<span class="group">查詢</span>-->
+		<span class="group">輸入</span>
 		<a id="register" href="register.html" onclick="return on_click(this)">註冊Camera</a>
+		<span class="group">查詢</span>
 		<a id="report" href="report.html" onclick="return on_click(this)">測試報告</a>
 	</div>
 	<div id="frame">
-		<iframe id="content_frame" src="employee.html" name="content_frame">
+		<iframe id="content_frame" src="register.html" name="content_frame">
 		</iframe>
 	</div>
 	</div>
