[YNM web] User can update the camera settings

--- a/ynm/static/ynm/index.html
+++ b/ynm/static/ynm/index.html
@@ -18,6 +18,9 @@
 		<a id="register" href="register.html" onclick="return on_click(this)">註冊Camera</a>
 		<span class="group">查詢</span>
 		<a id="report" href="report.html" onclick="return on_click(this)">測試報告</a>
+		<span class="group">管理</span>
+		<!--<a id="camera_all" href="camera_all.html" onclick="return on_click(this)">Camera名單</a>-->
+		<a id="register" href="camera_all.html" onclick="return on_click(this)">修改Camera</a>
 	</div>
 	<div id="frame">
 		<iframe id="content_frame" src="register.html" name="content_frame">
